<resources>
    <string name="app_name">lab6</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="number">Number</string>
    <string name="theme_title">Theme</string>

    <!-- Sync Preferences -->
    <string name="rev_title">Reverse</string>
    <string name="pic_title">Show picture</string>

</resources>